tests/parser/tests/cases/should_fail/unclosed_unicode_literal/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:14
1 |   k := '\u{005a';
  |                ^ here
  = note: invalid character escape sequence. Expected `}` after a escape sequence
